# duebot-2.0

./: .gitignore  CHANGELOG.md  DueBot.cabal  LICENSE  README.md  main.py  mapping  rules.cfg  shell.nix
app/: Main.hs
src/: MyLib.hs
src/DueBot/: EventHandler.hs  Main.hs
src/DueBot/SmallTalk/: Compiler.hs  Parser.hs
